kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
# Internal access to the Flux Operator Web UI
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
spec:
  hostnames:
    - "flux.${SECRET_DOMAIN}"
  parentRefs:
    - kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
      matches:
        - path:
            type: PathPrefix
            value: /
